Stop the linter from complaining

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -6,7 +6,7 @@
     <title>Project Dark</title>
     <link rel="stylesheet" type="text/css" href="/static/reset-normalize.css" />
     <link rel="stylesheet" type="text/css" href="/static/base.css" />
-    <link href="https://fonts.googleapis.com/css?family=Fira+Mono" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Mono" >
     <script type="text/javascript">
     function stopTab(event) {
       if (event.keyCode == 9) {
@@ -17,7 +17,7 @@
       }
     }
     </script>
-    <script src="/static/elm.js"> </script>
+    <script type="text/javascript" src="/static/elm.js"> </script>
 
   </head>
   <body onKeyDown="stopTab(event)" onKeyUp="stopTab(event)">
