Show open nodes

--- a/server/static/base.css
+++ b/server/static/base.css
@@ -149,6 +149,10 @@ Nodes
   color: black;
 }
 
+.node.open {
+  border: 0.5px groove mediumvioletred;
+}
+
 .node.selected .module {
   background: white;
   color: black;
