--- a/server/static/base.css
+++ b/server/static/base.css
@@ -55,7 +55,7 @@ Top level
  **************/
 
 .code {
-  font-size: 13px;
+  font-size: 10pt;
   white-space: pre;
 }
 
@@ -63,8 +63,33 @@ Top level
   display: inline-block;
 }
 
-.code div::before {
-  content: " ";
+.letexpr > .letbody {
+  display: block;
+}
+
+div.lambdaexpr {
+  display: block;
+  padding-left: 8px;
+  margin-left: 8px;
+  border-left: 1px solid red;
+}
+
+div.lambdabody {
+  display: block;
+}
+
+div.ifbody {
+  display: block;
+  margin-left: 16px;
+}
+
+div.elsebody {
+  display: block;
+  margin-left: 16px;
+}
+
+div.leaf {
+  margin-left: 8px;
 }
 
 
