Give structure to fn calls

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -100,8 +100,12 @@ div.elsebody {
   margin-left: 16px;
 }
 
-div.leaf {
+div.atom {
   margin-left: 8px;
+}
+
+.code .moduleseparator {
+  color: #a1b56c;
 }
 
 .code .keyword {
