Move base.css to base.less

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -204,7 +204,7 @@ Nodes
 /* .node.functiondef { */
 /*   /* Ideally, we'd have the background of a function behind the edges but */
 /*   in front of the grid. Unfortunately, z-index on SVG is kinda hard, so */
-/*   I don't know how to make this work. */ */
+/*   I don't know how to make this work. */
 /*   background: transparent; */
 /* } */
 /*  */
