--- a/server/static/base.less
+++ b/server/static/base.less
@@ -31,8 +31,8 @@ body {
 }
 
 /********************
-Top level
-********************/
+ * Top level
+ ********************/
 
 #grid {
   background: @black1;
@@ -159,65 +159,72 @@ Top level
 }
 
 /********************
- Entry (is also a node)
+ * Entry box
  ********************/
 
-/* #search-container { */
-/*   position: relative; */
-/* } */
-/*  */
-/* #search-container input { */
-/*   padding: 2px; */
-/*   width: 300px; */
-/* } */
-/*  */
-/* #search-container br { */
-/*   padding-bottom: 10px; */
-/* } */
-/*  */
-/* #darkEntry { */
-/*   z-index: 20; */
-/*   width: 300px; */
-/*   position: relative; */
-/*   color: #000; */
-/*   border: 1px solid #666; */
-/*   background: transparent; */
-/* } */
-/*  */
-/* #suggestion { */
-/*   position: absolute; */
-/*   top: 0; */
-/*   left: 0; */
-/*   color: #ccc; */
-/*   background: white; */
-/*   border: 1px solid #fff; */
-/* } */
-/*  */
-/* form { */
-/*   display: inline; */
-/* } */
-/*  */
-/* #autocomplete-holder { */
-/*   overflow-y: hidden; */
-/*   max-height: 250px; */
-/*   font-size: 85%; */
-/* } */
-/*  */
-/* .autocomplete-item.highlighted { */
-/*   background: #1c3670; */
-/* } */
-/* .autocomplete-item.greyed { */
-/*   color: grey; */
-/* } */
-/*  */
-/* .node.entry { */
-  /* headers need to be relative to position them. We need to be above
-   * the headers, and position:relative allows us to do it. */
-/*   position: relative; */
-/*   width: 330px; */
-/*   padding: 0.8em 1em; */
-/* } */
-/*  */
+#search-container {
+  position: relative;
+}
+
+#search-container input {
+  padding: 2px;
+  width: 300px;
+}
+
+#search-container br {
+  padding-bottom: 10px;
+}
+
+#darkEntry {
+  z-index: 20;
+  width: 300px;
+  position: relative;
+  color: #000;
+  border: 1px solid #666;
+  background: transparent;
+}
+
+#suggestion {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #ccc;
+  background: white;
+  border: 1px solid #fff;
+}
+
+form {
+  display: inline;
+}
+
+#autocomplete-holder {
+  overflow-y: hidden;
+  max-height: 250px;
+  font-size: 85%;
+}
+
+.autocomplete-item.highlighted {
+  background: #1c3670;
+}
+.autocomplete-item.greyed {
+  color: grey;
+}
+
+.node.entry {
+  // headers need to be relative to position them. We need to be above
+  // the headers, and position:relative allows us to do it.
+  position: relative;
+  width: 330px;
+  padding: 0.8em 1em;
+}
+
+.node.entry .types {
+  float: right;
+  text-transform: lowercase;
+  font-family: monospace;
+  font-size: 80%;
+}
+
 /* .node.string-entry { */
 /*   position: relative; */
 /*   width: 330px; */
@@ -239,13 +246,8 @@ Top level
 /* } */
 /*  */
 /*  */
-/* .node.entry .types { */
-/*   float: right; */
-/*   text-transform: lowercase; */
-/*   font-family: monospace; */
-/*   font-size: 80%; */
-/* } */
-/*  */
+
+
 
 
 /********************
