Fix appearance of autocomplete (next we'll change it)

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -209,7 +209,14 @@ form {
 .autocomplete-item.greyed {
   color: grey;
 }
-
+.node {
+  cursor: default;
+  box-sizing: border-box;
+  font-size: 14px;
+  background: #272728;
+  padding-top: 2px;
+  padding-bottom: 8.5px;
+}
 .node.entry {
   // headers need to be relative to position them. We need to be above
   // the headers, and position:relative allows us to do it.
@@ -279,7 +286,6 @@ form {
 /*   padding-top: 2px; */
 /*   padding-bottom: 8.5px; */
 /* } */
-/*  */
 /* .node.selected { */
 /*   background: white; */
 /*   color: black; */
