--- a/server/static/base.less
+++ b/server/static/base.less
@@ -164,35 +164,34 @@ body {
 
 #search-container {
   position: relative;
-}
 
-#search-container input {
-  padding: 2px;
-  width: 300px;
-}
+  input {
+    padding: 2px;
+    width: 300px;
+  }
 
-#search-container br {
-  padding-bottom: 10px;
-}
+  br {
+    padding-bottom: 10px;
+  }
 
-#darkEntry {
-  z-index: 20;
-  width: 300px;
-  position: relative;
-  color: #000;
-  border: 1px solid #666;
-  background: transparent;
-}
+  #darkEntry {
+    z-index: 20;
+    width: 300px;
+    position: relative;
+    color: #000;
+    border: 1px solid #666;
+    background: transparent;
+  }
 
-#suggestion {
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: #ccc;
-  background: white;
-  border: 1px solid #fff;
+  #suggestion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: #ccc;
+    background: white;
+    border: 1px solid #fff;
+  }
 }
-
 form {
   display: inline;
 }
@@ -203,12 +202,16 @@ form {
   font-size: 85%;
 }
 
-.autocomplete-item.highlighted {
-  background: #1c3670;
+.autocomplete-item {
+  &.highlighted {
+    background: #1c3670;
+  }
+
+  &.greyed {
+    color: grey;
+  }
 }
-.autocomplete-item.greyed {
-  color: grey;
-}
+
 .node {
   cursor: default;
   box-sizing: border-box;
@@ -216,21 +219,24 @@ form {
   background: #272728;
   padding-top: 2px;
   padding-bottom: 8.5px;
-}
-.node.entry {
-  // headers need to be relative to position them. We need to be above
-  // the headers, and position:relative allows us to do it.
-  position: relative;
-  width: 330px;
-  padding: 0.8em 1em;
+
+  &.entry {
+    // headers need to be relative to position them. We need to be above
+    // the headers, and position:relative allows us to do it.
+    position: relative;
+    width: 330px;
+    padding: 0.8em 1em;
+
+    .types {
+      float: right;
+      text-transform: lowercase;
+      font-family: monospace;
+      font-size: 80%;
+    }
+  }
 }
 
-.node.entry .types {
-  float: right;
-  text-transform: lowercase;
-  font-family: monospace;
-  font-size: 80%;
-}
+
 
 /* .node.string-entry { */
 /*   position: relative; */
