--- a/server/static/base.less
+++ b/server/static/base.less
@@ -178,37 +178,46 @@ body {
     font-family: monospace;
     font-size: 80%;
   }
-  #search-container {
-    position: relative;
-    input {
-      width: 300px;
-    }
-    #entryBox {
-      z-index: 20;
-      width: 300px;
+  form {
+    // makes the form takes up no space in the DOM, meaning we don't
+    // expand the top-level
+    position: absolute;
+    margin-top: -15px; // account for the space of both input boxes
+
+    #search-container {
       position: relative;
-      color: black;
-      background: transparent;
-    }
-    #suggestionBox {
-      position: absolute;
-      top: 0;
-      left: 0;
-      color: @grey3;
-      background: @white1;
+      input {
+        width: 300px;
+      }
+      #entryBox {
+        z-index: 20;
+        width: 300px;
+        position: relative;
+        color: black;
+        background: transparent;
+      }
+      #suggestionBox {
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: @grey3;
+        background: @white1;
+      }
     }
   }
   #autocomplete-holder {
     overflow-y: hidden;
-    max-height: 250px;
+    max-height: 100px;
     font-size: 85%;
-  }
-  .autocomplete-item {
-    &.highlighted {
-      background: #1c3670;
-    }
-    &.greyed {
-      color: @grey2;
+
+    .autocomplete-item {
+      background: @black2;
+      &.highlighted {
+        background: #1c3670;
+      }
+      &.greyed {
+        color: @grey2;
+      }
     }
   }
 }
