Add tabbing between holes inside toplevel

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -103,6 +103,11 @@ body {
     background-color: lighten(@black1, 5%);
   }
 
+  .selectedHole {
+    background-color: @grey1;
+    color: @grey1;
+  }
+
   .letexpr > .letbody {
     .layout-block;
   }
