Add dotted border for code blocks

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -93,6 +93,7 @@ body {
   padding: 8px;
   white-space: pre;
   width: max-content;
+  border: lighten(@black1, 5%) 2px dotted;
   .layout-block;
 
   div {
