Rename "code" html class to "ast"

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -87,7 +87,7 @@ body {
 /**************
  * AST css
  **************/
-.code {
+.ast {
   font-size: 10pt;
   font-family: 'Fira Code', monospace;
   padding: 8px;
