--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -6,7 +6,8 @@
     <title>Project Dark</title>
     <link rel="stylesheet" type="text/css" href="/static/reset-normalize.css" />
     <link rel="stylesheet" type="text/css" href="/static/base.css" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Fira+Mono" >
+    <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" >
     <script type="text/javascript">
     function stopTab(event) {
       if (event.keyCode == 9) {
