Start of the routing table

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -76,6 +76,17 @@ body {
   }
 }
 
+//*************
+// Routing table
+//*************
+.routing-table {
+  width: 300px;
+  .handler {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
 
 //*************
 // DB
