Add an external link to the routing table

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -119,6 +119,10 @@ body {
       }
     }
 
+    .external {
+      color: @orange;
+    }
+
     .verbs {
       color: @grey2;
       :not(:first-child):before {
