--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="/static/base.css" />
     <link rel="stylesheet" type="text/css"
     href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" >
+    <link rel="stylesheet" type="text/css"
+                           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+
     <script type="text/javascript">
     function stopTab(event) {
       if (event.keyCode == 9) {
