--- a/server/static/base.less
+++ b/server/static/base.less
@@ -211,6 +211,10 @@ body {
   & > .nested > .atom {
     margin-left: 0px;
   }
+  & > .nested > .atom.fieldaccessop {
+    margin-right: 0px;
+    margin-left: -4px;
+  }
 }
 
 .layout-inline {
@@ -275,6 +279,11 @@ body {
   .atom {
     margin-left: 4px;
     margin-right: 4px;
+  }
+
+  .atom.fieldaccessop {
+    margin-left: -4px;
+    margin-right: -4px;
   }
 
   .moduleseparator {
