Add highlighting of selected, fix Filling

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -70,10 +70,15 @@ body {
     background-color: lighten(@black1, 5%);
   }
 
-  .selected.hole {
+  .selected {
+    border: 0.5px magenta solid;
+
+  }
+  .leaf.selected.hole {
     background-color: @grey1;
     color: @grey1;
   }
+
 }
 
 //*************
