Add border padding

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -72,8 +72,9 @@ body {
 
   .selected {
     border: 0.5px magenta solid;
-
+    padding: 0.5px;
   }
+
   .leaf.selected.hole {
     background-color: @grey1;
     color: @grey1;
