Make entry box be a little saner for demo

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -313,6 +313,17 @@ body {
  * Entry box
  ********************/
 
+// TODO: figure out proper entry box positioning
+// -- this is a demo hack
+.header .entry form {
+  position: relative;
+  margin-top: 0px;
+}
+
+.db .entry form {
+  position: relative;
+  margin-top: 0px;
+}
 
 .entry {
   // headers need to be relative to position them. We need to be above
