--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -13,9 +13,7 @@
 
     <script type="text/javascript">
     function stopKeys(event) {
-      if (event.keyCode == 9 // Tab
-         || event.keyCode == 190  // .
-      ) {
+      if (event.keyCode == 9) { // Tab
         event.preventDefault();
       }
     }
