Re-add string entry box

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -386,25 +386,19 @@ body {
 }
 
 
-/* .node.string-entry { */
-/*   position: relative; */
-/*   width: 330px; */
-/*   padding: 0.2em 0.4em; */
-/* } */
-/*  */
-/* .string-container::before { */
-/*   content: "“"; */
-/* } */
-/*  */
-/* .string-container #darkEntry { */
-/*   color: black; */
-/*   border: 1px solid #666; */
-/*   background: white; */
-/* } */
-/*  */
-/* .string-container::after{ */
-/*   content: "”"; */
-/* } */
+.string-entry {
+  position: relative;
+  width: 330px;
+  padding: 0.2em 0.4em;
+}
+
+.string-container::before {
+  content: "“";
+}
+
+.string-container::after{
+  content: "”";
+}
 
 
 
