Patch the elm.js after it's compiled

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -19,7 +19,7 @@
 
     }
     </script>
-    <script type="text/javascript" src="/static/hacked.js"> </script>
+    <script type="text/javascript" src="/static/elm.js"> </script>
 
   </head>
   <body onKeyDown="stopKeys(event)" onKeyUp="stopKeys(event)">
