Get failure information from the integration tests

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -55,6 +55,10 @@ body {
 
 .specialButton {
   margin-right: 4px;
+
+  &#integrationTestSignal {
+    display: inline-block;
+  }
 }
 
 
@@ -401,8 +405,5 @@ body {
 .string-container::after{
   content: "”";
 }
-
-
-
 
 
