Make the prefix less obnoxious for edge cases

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -118,16 +118,10 @@ body {
     flex-direction: row;
     justify-content: space-between;
 
-    .name {
+    .url{
       color: @white3;
-      .p {
-        color: transparent;
-        display: inline-block; // needed to set width
-        width: 0px;
-        margin-left: 13px;
-        padding-left: 13px;
-        border-left: 2px solid @red;
-
+      .prefix {
+        color: @grey2;
       }
     }
 
