Spacing and indentation in ui.html

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -1,23 +1,31 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <title>Project Dark</title>
-    <link rel="stylesheet" type="text/css" href="/static/reset-normalize.css" />
-    <link rel="stylesheet" type="text/css" href="/static/base.css" />
-    <link rel="stylesheet" type="text/css"
-    href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" >
-    <link rel="stylesheet" type="text/css"
-                           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+    <meta http-equiv="Content-Type"
+          content="text/html; charset=UTF-8" />
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <link rel="stylesheet"
+          type="text/css"
+          href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" >
+    <link rel="stylesheet"
+          type="text/css"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+    <link rel="stylesheet"
+          type="text/css"
+          href="/static/reset-normalize.css" />
+    <link rel="stylesheet"
+          type="text/css"
+          href="/static/base.css" />
 
     <script type="text/javascript">
-    function stopKeys(event) {
-      if (event.keyCode == 9) { // Tab
-        event.preventDefault();
-      }
+      function stopKeys(event) {
+        if (event.keyCode == 9) { // Tab
+          event.preventDefault();
+        }
 
-    }
+      }
     </script>
     <script type="text/javascript" src="/static/elm.js"> </script>
 
