Make firacode a webfont

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -13,6 +13,8 @@
           type="text/css"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
     <link rel="stylesheet"
+          href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css">
+    <link rel="stylesheet"
           type="text/css"
           href="/static/reset-normalize.css" />
     <link rel="stylesheet"
