Stick a preview link sorta in the bottom right?
Super icky.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -201,6 +201,12 @@ body {
     font-size: 50%;
     width: 80px;
   }
+
+  .external {
+    color: @orange;
+    float: right;
+    margin-right: 15%;
+  }
 }
 
 
